--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 ﻿Django==4.2.7
 PyMuPDF==1.23.6
+pdfplumber==0.10.3
+psycopg2==2.9.9
+django-environ==0.11.2
+pandas==1.5.3
+pypdf==3.17.1
+openpyxl==3.0.10
